tests/compile_fail/eq/unknow_struct_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/eq/unknow_struct_attribute.rs:2:6
  |
2 | #[eq(unknown)]
  |      ^^^^^^^
